# VMAS_Skeleton

./: .gitignore  CMakeLists.txt
ANN/: ANN.cpp
include/: MeshDef.h  VMAS_Skeleton.h  VSfast.h
src/: VMAS_Skeleton.cpp  VSfast.cpp  main.cpp
